fix for strip item spacing and modal overflow

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   overflow: hidden;
 }
 
+body,
+html {
+  overflow: visible !important;
+}
+
 @font-face {
   font-family: "CustomFont";
   src: local("CustomFont"), url(./Hack-BoldOblique.ttf) format("truetype");
